<resources>
    <string name="app_name">Buscaminas</string>
    <string name="play_buscaminas">Jugar</string>
    <string name="bests">Mejores Tiempos</string>
    <string name="exit">Salir</string>
    <string name="users">Usuario</string>
    <string name="newButton">Nuevo</string>
    <string name="easy">Facil</string>
    <string name="medium">Intermedio</string>
    <string name="hard">Dificil</string>
    <string name="nickname">Alias</string>
    <string name="create">Crear</string>
    <string name="empty"/>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="lose">Perdiste</string>
    <string name="win">Ganaste!</string>
    <string name="ok">Aceptar</string>
</resources>
