<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">

    <Button
        android:id="@+id/easy_diff_button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeigh"
        android:layout_marginBottom="32dp"
        android:onClick="select"
        android:text="@string/easy" />

    <Button
        android:id="@+id/medium_diff_button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeigh"
        android:layout_marginBottom="32dp"
        android:onClick="select"
        android:text="@string/medium" />

    <Button
        android:id="@+id/hard_diff_button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeigh"
        android:onClick="select"
        android:text="@string/hard" />
</LinearLayout>