<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/nickname"
        android:textSize="36sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/aliasInputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nickname" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/nombre"
        android:textSize="36sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstNameInputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/apellido"
        android:textSize="36sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastNameInputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/apellido" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/create"
        android:textSize="24sp" />
</LinearLayout>