<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/users"
            android:textSize="32sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:gravity="top|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeigh"
            android:text="@string/play_buscaminas" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeigh"
            android:text="@string/newButton" />
    </LinearLayout>

</LinearLayout>